Fix whitespace handling

--- a/test/array-as-props.css
+++ b/test/array-as-props.css
@@ -1,4 +1,6 @@
 .test {
+	background: background;
+	color: primary;
 	max-width: [0, 1, 2];
 	padding: [1, 2];
 }
