--- a/test/array-as-props.expect.css
+++ b/test/array-as-props.expect.css
@@ -1,4 +1,6 @@
 .test {
+	background: #fff;
+	color: #07c;
 	max-width: initial;
 	padding: 4px;
 }
